# cookiecutter-abilian-python

./: .travis.yml  cookiecutter.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: prompts.rst
hooks/: pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .travis.yml  Makefile  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
